Improved css layout and fixed some responsiveness issue regarding layout shift on mobile and high resolution view of desktop

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -9,6 +9,9 @@ body {
   background-color: #f9f9f9;
   overflow-x: hidden;
 }
+main {
+  min-height: calc(100vh - 100px); 
+}
 
 /* ========== Book List Styling ========== */
 .book-container {
@@ -716,7 +719,7 @@ body {
 
 
 .login-container {
-  /* display: flex; */
+  display: block;
   padding: 0 10px;
   background: white;
   border-radius: 12px;
@@ -725,9 +728,9 @@ body {
   width: 100%;
   max-width: 400px;
   animation: slideUp 0.6s ease-out;
-  margin: 40px auto;
+  margin: auto;
   /* centers horizontally */
-  float: none;
+  position: relative;
 }
 
 @keyframes slideUp {
@@ -761,7 +764,7 @@ body {
 }
 
 .login-form {
-  padding: 40px;
+  padding: 20px;
 }
 
 .form-group {
@@ -991,6 +994,9 @@ body {
 }
 
 @media screen and (max-width: 320px) {
+  .login-container{
+    margin:10px 0;
+  }
   .login-header {
     padding: 18px 20px;
   }
@@ -1097,4 +1103,3 @@ body {
   border-radius: 4px;
   margin-bottom: 15px;
 }
-
